[package]
name = "iplens"
version = "0.1.0"
edition = "2021"
authors = ["0x1cc4 <roc.zhousir@gmail.com>"]
description = "一个检测和显示各种 IP 信息的命令行工具"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
pnet = "0.33.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
prettytable-rs = "0.10"
chrono = "0.4"
dns-lookup = "2.0"
mockito = "1.7.0"
# Windows 平台依赖
[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13"
